# beangrid

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/actions/: publish.yaml
.github/workflows/: publish.yaml
docs/: CNAME  index.html  main.js
notebooks/: ScraperTest.ipynb
notebooks/jupyterlite/: beangrid.ipynb  coffeedeals.ipynb
src/beangrid/: non_shopify_sites.txt  scrape_shopify.py  shopify_sites.txt  utils.py
src/coffeedeals/: non_shopify_sites.txt  scrape_shopify.py
src/coffeedeals/scrape/: brulerie_du_quai.py
