[tool.poetry]
name = "beangrid"
version = "0.1.0"
description = "Pulls Canadian Coffee prices from various places"
authors = ["Craig McConomy <cmcconomy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.1"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.3"
jupyterlite-core = "^0.2.0"
jupyterlite-pyodide-kernel = "^0.2.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
